--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
+    <title>Графік відключень</title>
 </head>
 <body>
 <div id="app" class="bg-white dark:bg-slate-800 p-3 min-w-96 min-h-lvh flex flex-col"></div>
