--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Графік відключень</title>
 </head>
 <body>
-<div id="app" class="bg-white dark:bg-slate-800 p-3 min-w-96 min-h-lvh flex flex-col"></div>
+<div id="app" class="bg-white dark:bg-slate-800 text-slate-900 p-3 min-w-96 min-h-lvh flex flex-col"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
